--- a/static/index.html
+++ b/static/index.html
@@ -34,13 +34,8 @@
 
       </div>
 
-      <div id="block-set-container" class="tab-pane">
-          <h1>CommandMaps</h1>
-          <div id="block-container">
-              Familiarize / Performance
-          </div>
-          <div id="nasa-container">
-          </div>
+      <div id="block-container" class="tab-pane">
+
       </div>
 
     <div id="survey-container" class="tab-pane">
