--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,8 @@
 
 <div class="container">
 
+    <audio id="soundHandle" style="display: none;"></audio>
+
     <div class="tab-content">
 
       <div id="start-container" class="tab-pane active">
