Finalized controller. Added remaining views.

--- a/static/index.html
+++ b/static/index.html
@@ -40,9 +40,13 @@
 
       </div>
 
-    <div id="survey-container" class="tab-pane">
+        <div id="survey-container" class="tab-pane">
 
-    </div>
+        </div>
+
+        <div id="thankyou-container" class="tab-pane">
+
+        </div>
 
 </div><!--/.container-->
 
