--- a/static/index.html
+++ b/static/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="shortcut icon" href="img/lambdatron-5.ico"> -->
-  
+
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css" />
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.css" />
 
+  <script src="lib/object-fit/polyfill.object-fit.js"></script>
   <script src="lib/jquery/jquery.js"></script>
   <script src="lib/history.js/jquery.history.js"></script>
   <script src="lib/underscore/underscore.js"></script>
@@ -18,37 +19,39 @@
   <script src="lib/backbone/backbone.js"></script>
   <script src="lib/backbone.localStorage/backbone.localStorage.js"></script>
 
+  <link rel="stylesheet" href="css/main.css" />
   <script src="templates.js"></script>
   <script data-main="js/main" src="lib/requirejs/require.js"></script>
   
-  <title>Test</title>
+  <title>Interface Test</title>
 </head>
 
-<body role="document">
+    <body role="document">
 
-<div class="container">
+        <div class="container">
 
-    <audio id="soundHandle" style="display: none;"></audio>
+            <div class="tab-content">
+                <div id="start-container" class="tab-pane active">
+                </div>
 
-    <div class="tab-content">
+                <div id="next-container" class="tab-pane">
+                    <row id="next-btn-row vertical-center-row">
+                        <div class="col-lg-12 vcenter">
+                            <button id="nextBlockBtn" type="button" class="btn btn-lg btn-default">Next</button>
+                        </div>
+                    </row>
+                </div>
 
-      <div id="start-container" class="tab-pane active">
-
-      </div>
-
-      <div id="block-container" class="tab-pane">
-
-      </div>
-
-        <div id="survey-container" class="tab-pane">
+                <div id="block-container" class="tab-pane">
+                </div>
+                <div id="survey-container" class="tab-pane">
+                </div>
+                <div id="thankyou-container" class="tab-pane">
+                </div>
+            </div>
 
         </div>
 
-        <div id="thankyou-container" class="tab-pane">
-
-        </div>
-
-</div><!--/.container-->
-
-</body>
+        <audio id="soundHandle" style="display: none;"></audio>
+    </body>
 </html>
