--- a/static/index.html
+++ b/static/index.html
@@ -30,14 +30,15 @@
 
         <div class="container">
 
-            <div class="tab-content">
+            <div class="tab-content next-size">
+
                 <div id="start-container" class="tab-pane active">
                 </div>
 
-                <div id="next-container" class="tab-pane">
-                    <row id="next-btn-row vertical-center-row">
-                        <div class="col-lg-12 vcenter">
-                            <button id="nextBlockBtn" type="button" class="btn btn-lg btn-default">Next</button>
+                <div id="next-container" class="tab-pane next-size">
+                    <row id="next-btn-row">
+                        <div class="col-lg-12 vertical-center-item">
+                            <button id="nextBlockBtn" type="button" class="btn btn-lg btn-default horizontal-center-item">Next</button>
                         </div>
                     </row>
                 </div>
