--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,9 @@
                 <div id="next-container" class="tab-pane">
                     <row id="next-btn-row vertical-center-row">
                         <div class="col-lg-12 vcenter">
+                          <p align="center">
                             <button id="nextBlockBtn" type="button" class="btn btn-lg btn-default">Next</button>
+                          </p>  
                         </div>
                     </row>
                 </div>
