--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,9 @@
                 </div>
 
                 <div id="next-container" class="tab-pane">
-                    <div class="vertical-center-item">
+                    <div class="vertical-center-item text-center">
+                        <p>On the next page, you will be asked to perform a series of tasks.
+                           Please carry out these tasks as quickly as possible.</p>
                         <button id="nextBlockBtn" type="button" class="btn btn-lg btn-default horizontal-center-item">Next</button>
                     </div>
                 </div>
