--- a/static/index.html
+++ b/static/index.html
@@ -56,8 +56,8 @@
 
         </div>
 
-        <audio id="soundCorrect" style="display: none;" src="sounds/correct1.wav"></audio>
-        <audio id="soundIncorrect" style="display: none;" src="sounds/incorrect1.wav"></audio>
+        <audio id="soundCorrect" preload="auto" style="display: none;" src="sounds/correct1.wav"></audio>
+        <audio id="soundIncorrect" preload="auto" style="display: none;" src="sounds/incorrect1.wav"></audio>
 
     </body>
 </html>
